syntax = "proto3";

package message;

import "github.com/getamis/alice/crypto/tss/dkg/message.proto";

enum MessageType {
    UnknownMessageType = 0;
    InitMessageType = 1;
    DkgMessageType = 2;
}

message Message {
  MessageType type = 1;
  oneof data {
      InitMessage init_data = 2;
      dkg.Message dkg_data = 3;
  }
}

message InitMessage {
  string request_id = 1;
  uint64 wallet_id = 2;
  string totp_token = 3;
}